Comenzando a convertir el sitio web a responsive

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,3 +3,4 @@
 @import "parciales/_header.scss";
 @import "parciales/_principal.scss";
 @import "parciales/_footer.scss";
+@import "parciales/_mediaqueries.scss";
