--- a/css/style.css
+++ b/css/style.css
@@ -173,4 +173,60 @@
 .icon {
   color: white;
 }
+
+@media screen and (max-width: 1250px) {
+  .contenedor_productos {
+    grid-template-columns: 222px 222px 222px;
+    grid-template-rows: 310px 310px 310px 310px;
+  }
+  .footer {
+    background-color: pink;
+  }
+}
+
+@media screen and (max-width: 980px) {
+  .contenedor_productos {
+    grid-template-columns: 222px 222px;
+    grid-template-rows: 310px 310px 310px 310px 310px;
+  }
+  .footer {
+    background-color: pink;
+    display: grid;
+    grid-template-columns: 45% 45%;
+    grid-template-rows: auto;
+  }
+  .footer_contenedor-1, .footer_contenedor-2, .footer_contenedor-3, .footer_contenedor-4 {
+    text-align: center;
+  }
+  .footer_contenedor-2-card {
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .contenedor {
+    margin: auto;
+    grid-template-columns: 100%;
+  }
+  .contenedor_categorias {
+    display: none;
+  }
+  .contenedor_productos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .footer {
+    background-color: pink;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+  }
+  .footer_contenedor-1, .footer_contenedor-2, .footer_contenedor-3, .footer_contenedor-4 {
+    text-align: center;
+  }
+  .footer_contenedor-2-card {
+    justify-content: center;
+  }
+}
 /*# sourceMappingURL=style.css.map */
